--- a/umbrel-app-store.yml
+++ b/umbrel-app-store.yml
@@ -1,2 +1,2 @@
 id: "pedrorey" # Choose the ID for your app store. This should contain only alphabets ("a to z") and dashes ("-").
-name: "pedrorey-apps" # Choose the name of your app store. It will show up in the UI as "<name> App Store".
+name: "Pedro Rey Apps" # Choose the name of your app store. It will show up in the UI as "<name> App Store".
