--- a/pedrorey-firefly-iii/docker-compose.yml
+++ b/pedrorey-firefly-iii/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
+    ports:
+       - 3306
     volumes:
       - ${APP_DATA_DIR}/data/mysql:/var/lib/mysql
     environment:
