--- a/pedrorey-firefly-iii/docker-compose.yml
+++ b/pedrorey-firefly-iii/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: firefly-iii_server_1
+      APP_HOST: pedrorey-firefly-iii_server_1
       APP_PORT: 8080
       PROXY_AUTH_WHITELIST: "/api/*"
 
