--- a/pedrorey-firefly-iii/docker-compose.yml
+++ b/pedrorey-firefly-iii/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     restart: on-failure
     environment:
       APP_KEY: $APP_FIREFLY_III_APP_KEY
-      DB_HOST: firefly-iii_db_1
+      DB_HOST: pedrorey-firefly-iii_db_1
       DB_PORT: 3306
       DB_CONNECTION: mysql
       DB_DATABASE: fireflyiii
