--- a/pedrorey-firefly-iii/umbrel-app.yml
+++ b/pedrorey-firefly-iii/umbrel-app.yml
@@ -1,6 +1,7 @@
 manifestVersion: 1
 id: pedrorey-firefly-iii
 name: Firefly III
+category: finance
 version: "6.1.10"
 tagline: Your personal finance manager
 icon: https://github.com/pedr0rey/umbrel-apps/blob/master/files/img/icon.svg?raw=true
