--- a/pedrorey-firefly-iii/docker-compose.yml
+++ b/pedrorey-firefly-iii/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_WHITELIST: "/api/*"
 
   server:
-    image: fireflyiii/core:latest
+    image: fireflyiii/core:version-6.1.10@sha256:c268cc2030ce6983f8ed820c9ee4510a0693bc1d9552fec81ed715b0f7fd113c
     # This image runs under the user/group www-data:www-data
     # user: "1000:1000"
     restart: on-failure
