--- a/pedrorey-firefly-iii-importer/docker-compose.yml
+++ b/pedrorey-firefly-iii-importer/docker-compose.yml
@@ -1,30 +1,15 @@
-version: '3.3'
-
-#
-# The Firefly III Data Importer will ask you for the Firefly III URL and a "Client ID".
-# You can generate the Client ID at http://localhost/profile (after registering)
-# The Firefly III URL is: http://app:8080
-#
-# Other URL's will give 500 | Server Error
-#
+version: "3.7"
 
 services:
+  app_proxy:
+    environment:
+      APP_HOST: pedrorey-firefly-iii-importer_importer_1
+      APP_PORT: 8080
+
   importer:
     image: fireflyiii/data-importer:version-1.4.4@sha256:c51bcb460134adac96d2e3086794e28616f1583bd4599219e3a818e50243cf0d
-    hostname: pedrorey-firefly-iii-importer_importer_1
     restart: on-failure
-    container_name: pedrorey-firefly-iii-importer_importer_1
-    ports:
-      - '30010:8080'
     environment:
-      FIREFLY_III_URL: http://pedrorey.local:30009
-      VANITY_URL: http://pedrorey.local:30009
-      DB_HOST: pedrorey.local
-      DB_PORT: 32772
-      DB_CONNECTION: mysql
-      DB_DATABASE: fireflyiii
-      DB_USERNAME: fireflyiii
-      DB_PASSWORD: psfinance*77
-      MYSQL_DATABASE: fireflyiii
-      MYSQL_USER: fireflyiii
-      MYSQL_PASSWORD: psfinance*77
+      # firefly-iii container:
+      - FIREFLY_III_URL=http://pedrorey-firefly-iii_server_1:8080
+      - VANITY_URL=http://${DEVICE_DOMAIN_NAME}:30009
