--- a/pedrorey-firefly-iii/docker-compose.yml
+++ b/pedrorey-firefly-iii/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       DB_CONNECTION: mysql
       DB_DATABASE: fireflyiii
       DB_USERNAME: fireflyiii
-      DB_PASSWORD: psfinance*77
+      DB_PASSWORD: password123
     volumes:
       - ${APP_DATA_DIR}/data/upload:/var/www/html/storage/upload
       - ${APP_DATA_DIR}/data/logs:/var/www/html/storage/logs
@@ -36,5 +36,5 @@ services:
     environment:
       MYSQL_DATABASE: "fireflyiii"
       MYSQL_USER: "fireflyiii"
-      MYSQL_PASSWORD: "psfinance*77"
-      MYSQL_ROOT_PASSWORD: "psfinance*77"
+      MYSQL_PASSWORD: "password123"
+      MYSQL_ROOT_PASSWORD: "password123"
